--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,309 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
-  <title>AirwatchProject</title>
-  <base href="/">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Airwatch Console</title>
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Google Font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body>
-  <app-root></app-root>
+<body class="hold-transition skin-blue sidebar-mini">
+<div class="wrapper">
+
+  <header class="main-header">
+    <!-- Logo -->
+    <a href="index2.html" class="logo">
+      <!-- mini logo for sidebar mini 50x50 pixels -->
+      <span class="logo-mini"><b>A</b>LT</span>
+      <!-- logo for regular state and mobile devices -->
+      <span class="logo-lg"><b>Airwatch Console</b></span>
+    </a>
+    <!-- Header Navbar: style can be found in header.less -->
+    <nav class="navbar navbar-static-top">
+      <!-- Sidebar toggle button-->
+      <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+        <span class="sr-only">Toggle navigation</span>
+      </a>
+
+      <div class="navbar-custom-menu">
+      </div>
+    </nav>
+  </header>
+  <!-- Left side column. contains the logo and sidebar -->
+  <aside class="main-sidebar">
+    <!-- sidebar: style can be found in sidebar.less -->
+    <section class="sidebar">
+      <!-- Sidebar user panel -->
+      <!-- search form -->
+      <form action="#" method="get" class="sidebar-form">
+        <div class="input-group">
+          <input type="text" name="q" class="form-control" placeholder="Search...">
+          <span class="input-group-btn">
+                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
+                </button>
+              </span>
+        </div>
+      </form>
+      <!-- /.search form -->
+      <!-- sidebar menu: : style can be found in sidebar.less -->
+      <ul class="sidebar-menu" data-widget="tree">
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-files-o"></i>
+            <span>Device Management</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-th"></i> <span>Users Management</span>
+          </a>
+        </li>
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-pie-chart"></i>
+            <span>User Groups Management</span>
+          </a>
+        </li>
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-laptop"></i>
+            <span>Airwatch Admin Help</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+        </li>
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-edit"></i> <span>User Devices Console</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+        </li>
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-table"></i> <span>Configuration Management</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <!-- /.sidebar -->
+  </aside>
+
+  <div class="content-wrapper">
+    <section class="content">
+      <div class="row" style="padding-top:2%;padding-left:3%;padding-right:3%;">
+        <div class="box box-primary">
+          <div class="box-header with-border">
+            <h3 class="box-title">New User Configuration</h3>
+          </div>
+          <div class="box-body">
+            <div class="row" style="padding-top:5px;padding-bottom:5px;">
+              <div class="col-xs-3">
+                <input type="text" class="form-control" placeholder="Enter User Group" style="border-radius:5px;">
+              </div>
+              <div class="col-xs-3">
+                <input type="text" class="form-control" placeholder="Enter Device Name" style="border-radius:5px;">
+              </div>
+              <div class="col-xs-3">
+                <input type="text" class="form-control" placeholder="Enter User Name" style="border-radius:5px;">
+              </div>
+              <div class="col-xs-3">
+                <button type="submit" class="btn btn-primary" style="width:40%;">Submit</button>
+              </div>
+            </div>
+          </div>
+          <!-- /.box-body -->
+        </div>
+      </div>
+      <div class="row" style="padding-top:2%;padding-left:2%;padding-right:2%;">
+        <div class="col-xs-12">
+          <div class="box box-danger">
+            <div class="box-header">
+              <h3 class="box-title">Device User Management</h3>
+
+              <div class="box-tools">
+                <div class="input-group input-group-sm" style="width: 150px;">
+                  <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+
+                  <div class="input-group-btn">
+                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body table-responsive no-padding">
+              <table class="table table-hover">
+                <tr>
+                  <th>Device ID</th>
+                  <th>Device Name</th>
+                  <th>User Group</th>
+                  <th>User Name</th>
+                  <th>User Access</th>
+                </tr>
+                <tr>
+                  <td>D0934ER2</td>
+                  <td>Zebra TC 70</td>
+                  <td>US-DC</td>
+                  <td>Sahana Bejjenki</td>
+                  <td><span class="label label-success">Approved</span></td>
+                </tr>
+                <tr>
+                  <td>ER096374TY</td>
+                  <td>Zebra TC 70</td>
+                  <td>Home-Office</td>
+                  <td>Dasari Nikhilesh</td>
+                  <td><span class="label label-warning">About to Expire</span></td>
+                </tr>
+                <tr>
+                  <td>35TY67IO32</td>
+                  <td>Motorola 9190</td>
+                  <td>UK-DC</td>
+                  <td>Sriram Rudraraju</td>
+                  <td><span class="label label-primary">Admin</span></td>
+                </tr>
+                <tr>
+                  <td>YHIO9823ER</td>
+                  <td>Zebra TC 70X</td>
+                  <td>ISD-Test</td>
+                  <td>Nithya Jagtap</td>
+                  <td><span class="label label-danger">Expired</span></td>
+                </tr>
+                <tr>
+                  <td>YHIO9823ER</td>
+                  <td>Zebra MC 40</td>
+                  <td>ISD-Test</td>
+                  <td>Mahantesh Patil</td>
+                  <td><span class="label label-danger">Expired</span></td>
+                </tr>
+                <tr>
+                  <td>YHIO9823ER</td>
+                  <td>Zebra TC 70</td>
+                  <td>ISD-Test</td>
+                  <td>Shalaka Deshpande</td>
+                  <td><span class="label label-danger">Expired</span></td>
+                </tr>
+                <tr>
+                  <td>YHIO9823ER</td>
+                  <td>Zebra MC 40</td>
+                  <td>ISD-Test</td>
+                  <td>Meenaxi Masali</td>
+                  <td><span class="label label-success">Active</span></td>
+                </tr>
+                <tr>
+                  <td>YHIO9823ER</td>
+                  <td>Zebra TC 70X</td>
+                  <td>ISD-Test</td>
+                  <td>Sridhar Perneedi</td>
+                  <td><span class="label label-warning">About to Expire</span></td>
+                </tr>
+              </table>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="box">
+            <div class="box-header">
+              <h3 class="box-title">Responsive Hover Table</h3>
+
+              <div class="box-tools">
+                <div class="input-group input-group-sm" style="width: 150px;">
+                  <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+
+                  <div class="input-group-btn">
+                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body table-responsive no-padding">
+              <table class="table table-hover">
+                <tr>
+                  <th>ID</th>
+                  <th>User</th>
+                  <th>Date</th>
+                  <th>Status</th>
+                  <th>Reason</th>
+                </tr>
+                <tr>
+                  <td>183</td>
+                  <td>John Doe</td>
+                  <td>11-7-2014</td>
+                  <td><span class="label label-success">Approved</span></td>
+                  <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
+                </tr>
+                <tr>
+                  <td>219</td>
+                  <td>Alexander Pierce</td>
+                  <td>11-7-2014</td>
+                  <td><span class="label label-warning">Pending</span></td>
+                  <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
+                </tr>
+                <tr>
+                  <td>657</td>
+                  <td>Bob Doe</td>
+                  <td>11-7-2014</td>
+                  <td><span class="label label-primary">Approved</span></td>
+                  <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
+                </tr>
+                <tr>
+                  <td>175</td>
+                  <td>Mike Doe</td>
+                  <td>11-7-2014</td>
+                  <td><span class="label label-danger">Denied</span></td>
+                  <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
+                </tr>
+              </table>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+      </div>
+      <div class="box box-danger">
+        <div class="box-header with-border">
+          <h3 class="box-title">Different Width</h3>
+        </div>
+        <div class="box-body">
+          <div class="row">
+            <div class="col-xs-3">
+              <input type="text" class="form-control" placeholder=".col-xs-3">
+            </div>
+            <div class="col-xs-4">
+              <input type="text" class="form-control" placeholder=".col-xs-4">
+            </div>
+            <div class="col-xs-5">
+              <input type="text" class="form-control" placeholder=".col-xs-5">
+            </div>
+          </div>
+        </div>
+        <!-- /.box-body -->
+      </div>
+    </section>
+  </div>
+
+  <footer class="main-footer">
+    <div class="pull-right hidden-xs">
+      <b>Version</b> 1.0.0
+    </div>
+    <strong>Copyright &copy; 2017 <a href="#">Wal-Mart Stores Inc</a>.</strong> All rights
+    reserved.
+  </footer>
+</div>
 </body>
 </html>
